vertical-align:top to fix line-number offset on some platforms

--- a/http/style.css
+++ b/http/style.css
@@ -691,6 +691,10 @@ h2 {
   min-height: 100%;
 }
 
+.lxrcode pre * {
+  vertical-align: top;
+}
+
 .lxrcode,
 .highlighttable,
 .linenodiv,
